--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 oauthlib==3.2.2
 pillow==10.2.0
+psycopg2-binary==2.9.9
 pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
