--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ defusedxml==0.8.0rc2
 Django==5.0.3
 django-browser-reload==1.12.1
 django-crispy-forms==2.1
+django-environ==0.11.2
 django-recaptcha==4.0.0
 django-tailwind==3.8.0
 django-templated-mail==1.1.1
@@ -27,6 +28,7 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 oauthlib==3.2.2
 pillow==10.2.0
+psycopg2-binary==2.9.9
 pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
