--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-slugify==8.0.4
 python3-openid==3.2.0
 pytz==2024.1
