--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cryptography==42.0.5
 defusedxml==0.8.0rc2
 Django==5.0.3
 django-browser-reload==1.12.1
+django-cors-headers==4.3.1
 django-crispy-forms==2.1
 django-environ==0.11.2
 django-recaptcha==4.0.0
